Supported updater on headless server.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -128,6 +128,8 @@ cyber-io.adjustable-overdrive.speed-increase=+{0}% to +{1}%
 control.cyber-io.yes=Yes
 control.cyber-io.no=No
 control.cyber-io.ok=OK
+control.cyber-io.update-mod.success=CyberIO {0} updated successfully. Please restart the game to reload CyberIO.
+control.cyber-io.update-mod.failed=Failed to update CyberIO {0} because {1}.
 # StatusEffects
 status.cyber-io-infected.name=Infected
 status.cyber-io-infected.description=The infected will hurt based on their current HP.
@@ -162,4 +164,3 @@ heimdall.force-field-max.name=Shield
 heimdall.force-field-regen.name=Shield Regeneration
 heimdall.force-field-radius.name=Shield Range
 heimdall.force-field-restore-time.name=Shield Reload
-
