--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -2,8 +2,8 @@
 welcome=Welcome to play Cyber IO {0}.
 Discord.title=Discord
 Discord=Sometimes, roaming in the space alone, you may want to seek a community \n\
-  to share your work or just hava a problem (of course, NO BUG).\n\
-  Alright, despite bad ECHO signal, there is a planet waiting for you, Plum Star on Discord.\n\
+  to share your work or just have a problem (of course, NO BUG).\n\
+  Alright, despite bad ECHO signal, our company is waiting for you, Plum Star on Discord.\n\
   Now, join us to secure reputation or report anything you want.
 Discord.link=https://discord.gg/PDwyxM3waw
 Discord.yes=Open Link
