--- a/.github/workflows/TestWhenPush.yml
+++ b/.github/workflows/TestWhenPush.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Get short commit hash
         run: echo "SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
-      - name: Test OpenGAL
+      - name: Test CyberIO
         run: |
           chmod +x gradlew
           ./gradlew test
