Supported searching for scenes in the parent welcome information.

--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -1,3 +1,9 @@
+#---Do not translate---
+Default.title=Default for Test
+Default=If you saw this page, it might mean you are using the CyberIO for test or Cyber mod didn't load properly.\n\
+  If you aren't a developer (modder), please contact with the author(s) of CyberIO.
+Default.read=I see
+#---Do not translate---
 # Standard
 welcome=Welcome to play Cyber IO {0}.
 Discord.title=Discord
@@ -26,21 +32,18 @@ ResearchProject=Good morning, newcomer! Since the former employee at your positi
   the Hologram Project (Holo-proj) has been suspended for a long time.\n\
   But fortunately, this project is now handed over to you, our savior. Now, go back to work!
 ResearchProject.read=Go Work
-
 TheSHIP.title=The SHIP
 TheSHIP=Image that you were floating in the space alone, what's the most important? Yes, of course, a spaceship.\n\
   The best&wise choice is the SHIP, produced by Plum Star Inc.,\n powered by controlled nuclear fusion and using the latest Ouroboros OS (stability guaranteed).\n\
   Commodity code: 111_1111_11_1001\n\
   PS: ECHO consultation accepted.
 TheSHIP.read=Mark as Junk
-
 ECHO.title=ECHO
 ECHO=To deal with communication barriers among various creatures and languages on planets, ECHO was developed.\n\
   It provided a simple way, one-click to talk, to interact each others.\n\
   In addition, ECHO stores cookies on the ECHO terminals to make your experience of communication better.\n\
   Detailed information about the use of cookies on your ECHO terminal is available on [#e53935]*404 Not Found*[].
 ECHO.read=Accept
-
 NewBrains.title=New Brains
 NewBrains=New Brains Corp.,which leads the biotech, medicine, neurology etc., is amongst the largest companies universe-wide.\n\
   Always, as it's named, they are at the forefront of brain science.\nMost of you haven't noticed it yet, but it's also a part of their projects.
