--- a/assets/welcomes/ja.properties
+++ b/assets/welcomes/ja.properties
@@ -1,47 +1,53 @@
+#---Do not translate---
+Default.title=Default for Test
+Default=If you saw this page, it might mean you are using the CyberIO for test or Cyber mod didn't load properly.\n\
+  If you aren't a developer (modder), please contact with the author(s) of CyberIO.
+Default.read=I see
+#---Do not translate---
 # Standard
 welcome=Welcome to play Cyber IO {0}.
 Discord.title=Discord
-Discord=時々、一人でスペースを歩き回って、貴方はコミュニティを探したいかもしれません。\n\
-  貴方の仕事を共有したり、問題を抱えたりする為に（もちろん、バグは有りません）。\n\
-  さて、悪いＥＣＨＯ信号にもかかわらず、貴方を待っている惑星《Discord》の《PlumStar》が有ります。\n\
-  今、私たちに参加して評判を確保したり、貴方が望むものを報告してください。
+Discord=\u6642\u3005\u3001\u4E00\u4EBA\u3067\u30B9\u30DA\u30FC\u30B9\u3092\u6B69\u304D\u56DE\u3063\u3066\u3001\u8CB4\u65B9\u306F\u30B3\u30DF\u30E5\u30CB\u30C6\u30A3\u3092\u63A2\u3057\u305F\u3044\u304B\u3082\u3057\u308C\u307E\u305B\u3093\u3002\n\
+  \u8CB4\u65B9\u306E\u4ED5\u4E8B\u3092\u5171\u6709\u3057\u305F\u308A\u3001\u554F\u984C\u3092\u62B1\u3048\u305F\u308A\u3059\u308B\u70BA\u306B\uFF08\u3082\u3061\u308D\u3093\u3001\u30D0\u30B0\u306F\u6709\u308A\u307E\u305B\u3093\uFF09\u3002\n\
+  \u3055\u3066\u3001\u60AA\u3044\uFF25\uFF23\uFF28\uFF2F\u4FE1\u53F7\u306B\u3082\u304B\u304B\u308F\u3089\u305A\u3001\u8CB4\u65B9\u3092\u5F85\u3063\u3066\u3044\u308B\u60D1\u661F\u300ADiscord\u300B\u306E\u300APlumStar\u300B\u304C\u6709\u308A\u307E\u3059\u3002\n\
+  \u4ECA\u3001\u79C1\u305F\u3061\u306B\u53C2\u52A0\u3057\u3066\u8A55\u5224\u3092\u78BA\u4FDD\u3057\u305F\u308A\u3001\u8CB4\u65B9\u304C\u671B\u3080\u3082\u306E\u3092\u5831\u544A\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 Discord.link=https://discord.gg/PDwyxM3waw
-Discord.yes=リンクを開く
-Discord.no=ジャンクとしてマーク
-UpdateECHO.title=ＥＣＨＯを更新する
-UpdateECHO=News: 最近、ＥＣＨＯは新しいバージョンを公開しました {0}。\n\
-  下のボタンをクリックして、ＥＣＨＯ端末を更新できます。
-UpdateECHO.yes=更新する
-UpdateECHO.no=今はやめろ
-UpdateECHO.dont-show=表示しない
+Discord.yes=\u30EA\u30F3\u30AF\u3092\u958B\u304F
+Discord.no=\u30B8\u30E3\u30F3\u30AF\u3068\u3057\u3066\u30DE\u30FC\u30AF
+UpdateECHO.title=\uFF25\uFF23\uFF28\uFF2F\u3092\u66F4\u65B0\u3059\u308B
+UpdateECHO=News: \u6700\u8FD1\u3001\uFF25\uFF23\uFF28\uFF2F\u306F\u65B0\u3057\u3044\u30D0\u30FC\u30B8\u30E7\u30F3\u3092\u516C\u958B\u3057\u307E\u3057\u305F {0}\u3002\n\
+  \u4E0B\u306E\u30DC\u30BF\u30F3\u3092\u30AF\u30EA\u30C3\u30AF\u3057\u3066\u3001\uFF25\uFF23\uFF28\uFF2F\u7AEF\u672B\u3092\u66F4\u65B0\u3067\u304D\u307E\u3059\u3002
+UpdateECHO.yes=\u66F4\u65B0\u3059\u308B
+UpdateECHO.no=\u4ECA\u306F\u3084\u3081\u308D
+UpdateECHO.dont-show=\u8868\u793A\u3057\u306A\u3044
 #v2
-EmploymentVerification.title=雇用確認
-EmploymentVerification=《Plum Star Inc.》にようこそ。此の新しいバージョンの完全なサイバネティックスをお楽しみください！\n\
-  然し、是等のデバイスを接続する面倒な作業について心配する必要が有るかもしれません。\n\
-  とにかく、頑張ってください！
-EmploymentVerification.read=加入
+EmploymentVerification.title=\u96C7\u7528\u78BA\u8A8D
+EmploymentVerification=\u300APlum Star Inc.\u300B\u306B\u3088\u3046\u3053\u305D\u3002\u6B64\u306E\u65B0\u3057\u3044\u30D0\u30FC\u30B8\u30E7\u30F3\u306E\u5B8C\u5168\u306A\u30B5\u30A4\u30D0\u30CD\u30C6\u30A3\u30C3\u30AF\u30B9\u3092\u304A\u697D\u3057\u307F\u304F\u3060\u3055\u3044\uFF01\n\
+  \u7136\u3057\u3001\u662F\u7B49\u306E\u30C7\u30D0\u30A4\u30B9\u3092\u63A5\u7D9A\u3059\u308B\u9762\u5012\u306A\u4F5C\u696D\u306B\u3064\u3044\u3066\u5FC3\u914D\u3059\u308B\u5FC5\u8981\u304C\u6709\u308B\u304B\u3082\u3057\u308C\u307E\u305B\u3093\u3002\n\
+  \u3068\u306B\u304B\u304F\u3001\u9811\u5F35\u3063\u3066\u304F\u3060\u3055\u3044\uFF01
+EmploymentVerification.read=\u52A0\u5165
 #v3
-ResearchProject.title=研究プロジェクト
-ResearchProject=お早うございます、新参者！ 貴方の立場の元従業員が辞めたので（うーん...物理的に）、\n\
-  ホログラムプロジェクト（Holo-proj）は長い間中断されています。\n\
-  然し幸いなことに、此のプロジェクトは今、私たちの救い主で有る貴方に引き渡されています。 さあ、仕事に戻りましょう！
-ResearchProject.read=仕事に行く
+ResearchProject.title=\u7814\u7A76\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8
+ResearchProject=\u304A\u65E9\u3046\u3054\u3056\u3044\u307E\u3059\u3001\u65B0\u53C2\u8005\uFF01 \u8CB4\u65B9\u306E\u7ACB\u5834\u306E\u5143\u5F93\u696D\u54E1\u304C\u8F9E\u3081\u305F\u306E\u3067\uFF08\u3046\u30FC\u3093...\u7269\u7406\u7684\u306B\uFF09\u3001\n\
+  \u30DB\u30ED\u30B0\u30E9\u30E0\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\uFF08Holo-proj\uFF09\u306F\u9577\u3044\u9593\u4E2D\u65AD\u3055\u308C\u3066\u3044\u307E\u3059\u3002\n\
+  \u7136\u3057\u5E78\u3044\u306A\u3053\u3068\u306B\u3001\u6B64\u306E\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306F\u4ECA\u3001\u79C1\u305F\u3061\u306E\u6551\u3044\u4E3B\u3067\u6709\u308B\u8CB4\u65B9\u306B\u5F15\u304D\u6E21\u3055\u308C\u3066\u3044\u307E\u3059\u3002 \u3055\u3042\u3001\u4ED5\u4E8B\u306B\u623B\u308A\u307E\u3057\u3087\u3046\uFF01
+ResearchProject.read=\u4ED5\u4E8B\u306B\u884C\u304F
 
-TheSHIP.title=船
-TheSHIP=貴方が一人で空間に浮かんでいたというイメージ、最も重要な事は何ですか？はい、もちろん、宇宙船。\n\
-  最良かつ賢明な選択は、制御された核融合を動力源とし、最新のウロボロスＯＳ（安定性が保証されている）を使用するPlumStarInc.によって製造されたＳＨＩＯＰです。\n\です。\n\
+TheSHIP.title=\u8239
+TheSHIP=\u8CB4\u65B9\u304C\u4E00\u4EBA\u3067\u7A7A\u9593\u306B\u6D6E\u304B\u3093\u3067\u3044\u305F\u3068\u3044\u3046\u30A4\u30E1\u30FC\u30B8\u3001\u6700\u3082\u91CD\u8981\u306A\u4E8B\u306F\u4F55\u3067\u3059\u304B\uFF1F\u306F\u3044\u3001\u3082\u3061\u308D\u3093\u3001\u5B87\u5B99\u8239\u3002\n\
+  \u6700\u826F\u304B\u3064\u8CE2\u660E\u306A\u9078\u629E\u306F\u3001\u5236\u5FA1\u3055\u308C\u305F\u6838\u878D\u5408\u3092\u52D5\u529B\u6E90\u3068\u3057\u3001\u6700\u65B0\u306E\u30A6\u30ED\u30DC\u30ED\u30B9\uFF2F\uFF33\uFF08\u5B89\u5B9A\u6027\u304C\u4FDD\u8A3C\u3055\u308C\u3066\u3044\u308B\uFF09\u3092\u4F7F\u7528\u3059\u308BPlumStarInc.\u306B\u3088\u3063\u3066\u88FD\u9020\u3055\u308C\u305F\uFF33\uFF28\uFF29\uFF2F\uFF30\u3067\u3059\u3002\n\\uFFE3\uFFFD\uFFFD\u3059\u3002\n\
   Commodity code: 111_1111_11_1001\n\
-  PS: ＥＣＨＯの相談を受け付けました。
-TheSHIP.read=ジャンクとしてマーク
+  PS: \uFF25\uFF23\uFF28\uFF2F\u306E\u76F8\u8AC7\u3092\u53D7\u3051\u4ED8\u3051\u307E\u3057\u305F\u3002
+TheSHIP.read=\u30B8\u30E3\u30F3\u30AF\u3068\u3057\u3066\u30DE\u30FC\u30AF
 
-ECHO.title=ＥＣＨＯ
-ECHO=惑星上の様々な生き物や言語間のコミュニケーションの障壁に対処する為に、ECHOが開発されました。\n\
-  其れは、ワンクリックで話し、お互いに対話する為の簡単な方法を提供しました。\n\
-  さらに、ＥＣＨＯはＥＣＨＯ端末に Cookie を保存して、コミュニケーションのエクスペリエンスを向上させます。\n\
-  ＥＣＨＯ端末での Cookie の使用に関する詳細情報は、[#e53935]*404 Not Found*[] で入手出来ます。
-ECHO.read=承認
+ECHO.title=\uFF25\uFF23\uFF28\uFF2F
+ECHO=\u60D1\u661F\u4E0A\u306E\u69D8\u3005\u306A\u751F\u304D\u7269\u3084\u8A00\u8A9E\u9593\u306E\u30B3\u30DF\u30E5\u30CB\u30B1\u30FC\u30B7\u30E7\u30F3\u306E\u969C\u58C1\u306B\u5BFE\u51E6\u3059\u308B\u70BA\u306B\u3001ECHO\u304C\u958B\u767A\u3055\u308C\u307E\u3057\u305F\u3002\n\
+  \u5176\u308C\u306F\u3001\u30EF\u30F3\u30AF\u30EA\u30C3\u30AF\u3067\u8A71\u3057\u3001\u304A\u4E92\u3044\u306B\u5BFE\u8A71\u3059\u308B\u70BA\u306E\u7C21\u5358\u306A\u65B9\u6CD5\u3092\u63D0\u4F9B\u3057\u307E\u3057\u305F\u3002\n\
+  \u3055\u3089\u306B\u3001\uFF25\uFF23\uFF28\uFF2F\u306F\uFF25\uFF23\uFF28\uFF2F\u7AEF\u672B\u306B Cookie \u3092\u4FDD\u5B58\u3057\u3066\u3001\u30B3\u30DF\u30E5\u30CB\u30B1\u30FC\u30B7\u30E7\u30F3\u306E\u30A8\u30AF\u30B9\u30DA\u30EA\u30A8\u30F3\u30B9\u3092\u5411\u4E0A\u3055\u305B\u307E\u3059\u3002\n\
+  \uFF25\uFF23\uFF28\uFF2F\u7AEF\u672B\u3067\u306E Cookie \u306E\u4F7F\u7528\u306B\u95A2\u3059\u308B\u8A73\u7D30\u60C5\u5831\u306F\u3001[#e53935]*404 Not Found*[] \u3067\u5165\u624B\u51FA\u6765\u307E\u3059\u3002
+ECHO.read=\u627F\u8A8D
 
-NewBrains.title=新しい頭脳
-NewBrains=バイオテクノロジー、医学、神経学などをリードする New Brains Corp. は、世界最大の企業の１つです。\n\
-  常に、其之名のとおり、彼らは脳科学の最前線にいます。\nほとんどの人はまだ気づいていませんが、其れは彼らのプロジェクトの一部でも有ります。
-NewBrains.read=既読にする
+NewBrains.title=\u65B0\u3057\u3044\u982D\u8133
+NewBrains=\u30D0\u30A4\u30AA\u30C6\u30AF\u30CE\u30ED\u30B8\u30FC\u3001\u533B\u5B66\u3001\u795E\u7D4C\u5B66\u306A\u3069\u3092\u30EA\u30FC\u30C9\u3059\u308B New Brains Corp. \u306F\u3001\u4E16\u754C\u6700\u5927\u306E\u4F01\u696D\u306E\uFF11\u3064\u3067\u3059\u3002\n\
+  \u5E38\u306B\u3001\u5176\u4E4B\u540D\u306E\u3068\u304A\u308A\u3001\u5F7C\u3089\u306F\u8133\u79D1\u5B66\u306E\u6700\u524D\u7DDA\u306B\u3044\u307E\u3059\u3002\n\u307B\u3068\u3093\u3069\u306E\u4EBA\u306F\u307E\u3060\u6C17\u3065\u3044\u3066\u3044\u307E\u305B\u3093\u304C\u3001\u5176\u308C\u306F\u5F7C\u3089\u306E\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306E\u4E00\u90E8\u3067\u3082\u6709\u308A\u307E\u3059\u3002
+NewBrains.read=\u65E2\u8AAD\u306B\u3059\u308B
