Welcome system now supports more templates and actions.

--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -48,3 +48,10 @@ NewBrains.title=New Brains
 NewBrains=New Brains Corp.,which leads the biotech, medicine, neurology etc., is amongst the largest companies universe-wide.\n\
   Always, as it's named, they are at the forefront of brain science.\nMost of you haven't noticed it yet, but it's also a part of their projects.
 NewBrains.read=Mark as Read
+AdBlock.title=Block Ad
+AdBlock=Do you feel the popup advertisement is annoying?\n\
+  Let's install the AdBlock, which can provide a completely clear environment for you!\n\
+  P.S.: If you want to bring ad back, please check the game settings at:\n\
+  Settings >> Game >> Receive Message from Plum Star Inc.
+AdBlock.yes=Install
+AdBlock.no=Not Now
