--- a/assets/welcomes/ja.properties
+++ b/assets/welcomes/ja.properties
@@ -51,3 +51,10 @@ NewBrains.title=\u65B0\u3057\u3044\u982D\u8133
 NewBrains=\u30D0\u30A4\u30AA\u30C6\u30AF\u30CE\u30ED\u30B8\u30FC\u3001\u533B\u5B66\u3001\u795E\u7D4C\u5B66\u306A\u3069\u3092\u30EA\u30FC\u30C9\u3059\u308B New Brains Corp. \u306F\u3001\u4E16\u754C\u6700\u5927\u306E\u4F01\u696D\u306E\uFF11\u3064\u3067\u3059\u3002\n\
   \u5E38\u306B\u3001\u5176\u4E4B\u540D\u306E\u3068\u304A\u308A\u3001\u5F7C\u3089\u306F\u8133\u79D1\u5B66\u306E\u6700\u524D\u7DDA\u306B\u3044\u307E\u3059\u3002\n\u307B\u3068\u3093\u3069\u306E\u4EBA\u306F\u307E\u3060\u6C17\u3065\u3044\u3066\u3044\u307E\u305B\u3093\u304C\u3001\u5176\u308C\u306F\u5F7C\u3089\u306E\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306E\u4E00\u90E8\u3067\u3082\u6709\u308A\u307E\u3059\u3002
 NewBrains.read=\u65E2\u8AAD\u306B\u3059\u308B
+AdBlock.title=Block Ad
+AdBlock=Do you feel the popup advertisement is annoying?\n\
+  Let's install the AdBlock, which can provide a completely clear environment for you!\n\
+  P.S.: If you want to bring ad back, please check the game settings at:\n\
+  Settings >> Game >> \u300APlum Star Inc.\u300B\u304B\u3089\u306E\u30E1\u30C3\u30BB\u30FC\u30B8\u3092\u53D7\u4FE1\u3057\u307E\u3059\u3002
+AdBlock.yes=Install
+AdBlock.no=Not Now
