The eve of v3.2

--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -17,9 +17,9 @@ Discord.no=Mark as Junk
 UpdateECHO.title=Update ECHO
 UpdateECHO=News: Recently, the ECHO has published a new version {0}.\n\
   You can click the button below to update your ECHO terminal.
-UpdateECHO.yes=Update
-UpdateECHO.no=Not Now
-UpdateECHO.dont-show=Don't Show
+UpdateECHO.button-a=Update
+UpdateECHO.button-b=Not Now
+UpdateECHO.button-c=Don't Show
 #v2
 EmploymentVerification.title=Employment Verification
 EmploymentVerification=Welcome to join us, Plum Star Inc., enjoy this new version of full cybernetic things!\n\
