--- a/assets/installations/en.properties
+++ b/assets/installations/en.properties
@@ -11,5 +11,5 @@ content=Hello, don't be afraid. This email is automatically sent to anyone who f
 tip=Cyber IO installer will start up after restarting the Mindustry.\n\
   Thus, you can still go shopping on mod browser to download other mods, and please pay attention to the compatibility among mods.
 read=Apply
-address=Seriously\nPlum Star Inc.
+address=Sincerely\nPlum Star Inc.
 default-name=You
