Fixed CyberIO settings didn't always show on settings menu.

--- a/assets/welcomes/ja.properties
+++ b/assets/welcomes/ja.properties
@@ -55,6 +55,6 @@ AdBlock.title=Block Ad
 AdBlock=Do you feel the popup advertisement is annoying?\n\
   Let's install the AdBlock, which can provide a completely clear environment for you!\n\
   P.S.: If you want to bring ad back, please check the game settings at:\n\
-  Settings >> Game >> \u300APlum Star Inc.\u300B\u304B\u3089\u306E\u30E1\u30C3\u30BB\u30FC\u30B8\u3092\u53D7\u4FE1\u3057\u307E\u3059\u3002
+  Settings >> Cyber IO >> \u300APlum Star Inc.\u300B\u304B\u3089\u306E\u30E1\u30C3\u30BB\u30FC\u30B8\u3092\u53D7\u4FE1\u3057\u307E\u3059\u3002
 AdBlock.yes=Install
 AdBlock.no=Not Now
