--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -55,3 +55,6 @@ AdBlock=Do you feel the popup advertisement is annoying?\n\
   Settings >> Cyber IO >> Receive Message from Plum Star Inc.
 AdBlock.yes=Install
 AdBlock.no=Not Now
+404NotFound.title=[#e53935]404 Not Found[]
+404NotFound=[#e53935]404 Not Found[]
+404NotFound.read=Quit
