--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -142,12 +142,29 @@ ability.cyber-io-holo=The holographic-projected units using Cyberion is attenuat
 ability.cyber-io-holo-force-field=Projecting auto-regenerating holographic force field.
 # Settings
 setting.cyber-io-connection-opacity.name=Connection Opacity
+setting.cyber-io-connection-opacity.description=The opacity of arrow between sender and receiver.
 setting.cyber-io-connection-density.name=Connection Density
+setting.cyber-io-connection-density.description=The density of arrow between sender and receiver.
 setting.cyber-io-connection-size.name=Connection Arrow Size
+setting.cyber-io-connection-size.description=The size of arrow between sender and receiver.
 setting.cyber-io-show-link-circle.name=Show Connection Circle
+setting.cyber-io-show-link-circle.description=Whether show a circle surrounding sender and receiver.
 setting.cyber-io-always-show-link.name=Always Show Connection
+setting.cyber-io-always-show-link.description=Whether the arrow always shows up when they're connected.
 setting.cyber-io-show-welcome.name=Receive Message from Plum Star Inc.
+setting.cyber-io-show-welcome.description=Whether flavor text shows up when game starts up.
 setting.cyber-io-show-update.name=Show CyberIO Update Notification
+setting.cyber-io-show-update.description=Whether check update when game starts up.
+setting.cyber-io-github-mirror.button=GitHub Mirror
+setting.cyber-io-github-mirror.button-tooltip=Set the GitHub mirror.\nUse it only if you can't access GitHub normally.
+setting.cyber-io-github-mirror.dialog=Enter GitHub Mirror URL
+setting.cyber-io-github-mirror.failed=Can't validate {0} because {1}
+setting.cyber-io-github-mirror.success=Validation succeeded !\nGitHub mirror was set as {0}.
+setting.cyber-io-github-mirror.reset=The GitHub mirror was reset as {0}.
+setting.cyber-io-github-mirror.field-tooltip=Click save button to validate this url.\n\
+  Empty this and save to reset the url.
+setting.cyber-io-github-mirror.save-tooltip=Save after validation
+setting.cyber-io-github-mirror.cancel-tooltip=Desert the input.
 # UI
 ui.cyber-io.mouse-position.tile=Tile:{0},{1}
 ui.cyber-io.mouse-position.build=Build:{0},{1}
