--- a/assets/installations/en.properties
+++ b/assets/installations/en.properties
@@ -6,7 +6,7 @@ content=Hello, don't be afraid. This email is automatically sent to anyone who f
   Our company, Plum Star Inc., specially recruits you to participate in our project development and space exploration.\n\
   And we mainly develop holographic projection technology and cross-space data transmission.\n\
   As a traditional story, we also have a counterpart who has the leading position of biotech and brain science.\n\
-  We can provide a handsome salary and opportunity of promotion for you. A bright future is waiting for you.\n\
+  We can provide a handsome salary and opportunity of promotion for you. And a bright future is also waiting for you.\n\
   Apply now!
 tip=Cyber IO installer will start up after restarting the Mindustry.\n\
   Thus, you can still go shopping on mod browser to download other mods, and please pay attention to the compatibility among mods.
