[AR] Added checking update manually

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -128,8 +128,9 @@ cyber-io.adjustable-overdrive.speed-increase=+{0}% to +{1}%
 control.cyber-io.yes=Yes
 control.cyber-io.no=No
 control.cyber-io.ok=OK
+control.cyber-io.validate=Validate
 control.cyber-io.update-mod.success=CyberIO {0} updated successfully. Please restart the game to reload CyberIO.
-control.cyber-io.update-mod.failed=Failed to update CyberIO {0} because {1}.
+control.cyber-io.update-mod.failed=Failed to update CyberIO because {0}.
 # StatusEffects
 status.cyber-io-infected.name=Infected
 status.cyber-io-infected.description=The infected will hurt based on their current HP.
@@ -165,6 +166,9 @@ setting.cyber-io-github-mirror.field-tooltip=Click save button to validate this 
   Empty this and save to reset the url.
 setting.cyber-io-github-mirror.save-tooltip=Save after validation
 setting.cyber-io-github-mirror.cancel-tooltip=Desert the input.
+setting.cyber-io-check-update.button=Check Update
+setting.cyber-io-check-update.already-latest=Current Cyber IO is already latest.
+setting.cyber-io-check-update.not-support=Check update doesn't support.
 # UI
 ui.cyber-io.mouse-position.tile=Tile:{0},{1}
 ui.cyber-io.mouse-position.build=Build:{0},{1}
