Balance. Bug self-reports. Fixed build scripts. Used ()->Shader instead of Shader.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -188,3 +188,4 @@ heimdall.force-field-max.name=Shield
 heimdall.force-field-regen.name=Shield Regeneration
 heimdall.force-field-radius.name=Shield Range
 heimdall.force-field-restore-time.name=Shield Reload
+heimdall.power-use.name=Power Use
