--- a/.gitignore
+++ b/.gitignore
@@ -168,6 +168,7 @@ __pycache__/
 
 ## Gradle :main project
 main/build
+main/src/net/liplum/gen/Contents.kt
 buildSrc/build
 bundle/build
 processor/build
