Heartbeat and temperature.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -67,7 +67,7 @@ block.cyber-io-data-miner.name=Data Miner
 block.cyber-io-data-miner.description=Extract the real mineral by AI. If you find this, oh, you reserved this block.
 block.cyber-io-heimdall.name=Heimdall
 block.cyber-io-heimdall.description=The combination of biotech, brain science and Iot, using Brain\u2013computer interface and neural network, can totally change the enemy's mindset.
-block.cyber-io-heimdall.details=The artifact of New Brains Crop.
+block.cyber-io-heimdall.details=The project of New Brains Crop.
 block.cyber-io-heimdall.stats.power-use=Based on upgrade components.
 block.cyber-io-heimdall-eye.name=Eye of Heimdall
 block.cyber-io-heimdall-eye.description=A detachable component, designed for heimdall improvement, can stare at anyone that it considers as an enemy.
@@ -75,6 +75,9 @@ block.cyber-io-heimdall-eye.details=The upgrade component developed by New Brain
 block.cyber-io-heimdall-ear.name=Ear of Heimdall
 block.cyber-io-heimdall-ear.description=A sonic sensor, designed for heimdall upgrade, can detect the vibration of enemy and realize the sonic wave by mind power.
 block.cyber-io-heimdall-ear.details=The upgrade component developed by New Brains Crop.
+block.cyber-io-heimdall-heart.name=Heart of Heimdall
+block.cyber-io-heimdall-heart.description=
+block.cyber-io-heimdall-heart.details=The upgrade component developed by New Brains Crop.
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
@@ -121,6 +124,8 @@ bar.cyber-io.host=Host: {0}
 bar.cyber-io.rest-life=Rest Life
 bar.cyber-io.rest-life.figure=Rest Life: {0}s
 bar.cyber-io.rest-resurrect=Rest Life: {0} times
+bar.cyber-io.blood=Blood
+bar.cyber-io.temperature=Temperature
 # Bundles
 cyber-io.cyberion-req=cyberion
 cyber-io.cost.second=sec
