--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -76,8 +76,8 @@ block.cyber-io-heimdall-ear.name=Ear of Heimdall
 block.cyber-io-heimdall-ear.description=A sonic sensor, designed for heimdall upgrade, can detect the vibration of enemy and realize the sonic wave by mind power.
 block.cyber-io-heimdall-ear.details=The upgrade component developed by New Brains Crop.
 block.cyber-io-heimdall-heart.name=Heart of Heimdall
-block.cyber-io-heimdall-heart.description=
-block.cyber-io-heimdall-heart.details=The upgrade component developed by New Brains Crop.
+block.cyber-io-heimdall-heart.description=The latest result of Heimdall Project, and it's still in bleeding-edge testing.
+block.cyber-io-heimdall-heart.details=The upgrade component designed to be independent by New Brains Crop.
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
