--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -36,9 +36,11 @@ block.cyber-io-prism.name=Prism
 block.cyber-io-prism.description=PRISM can copy your bullets because it is for your security.
 block.cyber-io-prism-obelisk.name=Obelisk
 block.cyber-io-prism-obelisk.description=It's watching you.
+block.cyber-io-prism-obelisk.tip=Link with a prism side by side
 block.cyber-io-smart-distributor.name=Smart Distributor
 block.cyber-io-smart-distributor.description=One-Click to connect, it's easy to distribute your software.
 block.cyber-io-smart-distributor.stats.power-use=Based on the number of items required.
+block.cyber-io-smart-distributor.tip=Distribute to surroundings side by side.
 block.cyber-io-smart-unloader.name=Smart Unloader
 block.cyber-io-smart-unloader.description=Smart Unloader can relieve the heavy pressure of transport and help improve mobility.
 block.cyber-io-smart-unloader.stats.power-use=Based on the number of connections and items required.
