Add oh no in welcome list.

--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -1,6 +1,6 @@
 #---Do not translate---
 Default.title=Default for Test
-Default=If you saw this page, it might mean you are using the CyberIO for test or Cyber mod didn't load properly.\n\
+Default=If you saw this page, it might mean you are using the CyberIO for test or CyberIO didn't load properly.\n\
   If you aren't a developer (modder), please contact with the author(s) of CyberIO.
 Default.read=I see
 #---Do not translate---
@@ -58,3 +58,6 @@ AdBlock.no=Not Now
 404NotFound.title=[#e53935]404 Not Found[]
 404NotFound=[#e53935]404 Not Found[]
 404NotFound.read=Quit
+OhNo.title=Oh No!
+OhNo=Oh No!
+OhNo.read=Oh No
