--- a/assets/welcomes/ja.properties
+++ b/assets/welcomes/ja.properties
@@ -1,6 +1,6 @@
 #---Do not translate---
 Default.title=Default for Test
-Default=If you saw this page, it might mean you are using the CyberIO for test or Cyber mod didn't load properly.\n\
+Default=If you saw this page, it might mean you are using the CyberIO for test or CyberIO mod didn't load properly.\n\
   If you aren't a developer (modder), please contact with the author(s) of CyberIO.
 Default.read=I see
 #---Do not translate---
