Added toast and range limit of sender.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -7,6 +7,7 @@ block.cyber-io-receiver.name=Receiver
 block.cyber-io-receiver.description=Receives the data.
 block.cyber-io-sender.name=Sender
 block.cyber-io-sender.description=Sends the data.
+block.cyber-io-sender.over-range=Over Range
 block.cyber-io-virus.name=Virus
 block.cyber-io-virus.description=An infinite spreading virus.
 block.cyber-io-land-projector.name=Land Projector
@@ -44,14 +45,17 @@ block.cyber-io-smart-distributor.tip=Distribute to surroundings side by side.
 block.cyber-io-smart-unloader.name=Smart Unloader
 block.cyber-io-smart-unloader.description=Smart Unloader can relieve the heavy pressure of transport and help improve mobility.
 block.cyber-io-smart-unloader.stats.power-use=Based on the number of connections and items required.
+block.cyber-io-smart-unloader.over-range=Over Range
 block.cyber-io-stream-client.name=Stream Client
 block.cyber-io-stream-client.description=Clients can get the instant liquid but limited by the network speed.
 block.cyber-io-stream-host.name=Stream Host
 block.cyber-io-stream-host.description=Hosting your stream. Every client can get your broadcast if they like.
 block.cyber-io-stream-host.stats.power-use=Based on the number of connections.
+block.cyber-io-stream-host.over-range=Over Range
 block.cyber-io-stream-server.name=Stream Server
 block.cyber-io-stream-server.description=A live-streaming server where you can share personal experience of Mindustry game! Enjoy yourself!
 block.cyber-io-stream-server.stats.power-use=Based on the number of host/client connections.
+block.cyber-io-stream-server.over-range=Over Range
 block.cyber-io-jammer.name=Jammer
 block.cyber-io-jammer.description=Jamming devices. Warning! Your cell phone may be jammed by it!
 block.cyber-io-cyberion-mixer.name=Cyberion Mixer
