Fixed smart distributor's animation.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -38,7 +38,7 @@ block.cyber-io-prism.name=Prism
 block.cyber-io-prism.description=PRISM can copy your bullets because it is for your security.
 block.cyber-io-prism-obelisk.name=Obelisk
 block.cyber-io-prism-obelisk.description=It's watching you.
-block.cyber-io-prism-obelisk.tip=Link with a prism side by side
+block.cyber-io-prism-obelisk.tip=Link with a Prism side by side
 block.cyber-io-smart-distributor.name=Smart Distributor
 block.cyber-io-smart-distributor.description=One-Click to connect, it's easy to distribute your software.
 block.cyber-io-smart-distributor.stats.power-use=Based on the number of items required.
