Added `Rate Us` welcome message.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -65,7 +65,7 @@ block.cyber-io-holo-projector.name=Holo Projector
 block.cyber-io-holo-projector.description=Projecting holographic units by Cyberion.
 block.cyber-io-stealth.name=Stealth
 block.cyber-io-stealth.description=******Permission Denied*******
-block.cyber-io-stealth.unaccepted=Unaccepted
+block.cyber-io-stealth.unaccepted=Permission Denied
 block.cyber-io-aqua-cyberion.name=Cyberion
 block.cyber-io-aqua-cyberion.description=A common liquid.
 block.cyber-io-wireless-tower.name=Wireless Tower
