--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -61,3 +61,7 @@ AdBlock.no=Not Now
 OhNo.title=Oh No!
 OhNo=Oh No!
 OhNo.read=Oh No
+RateUs.title=Rate Cyber IO
+RateUs=Pardon the interruption, do you enjoy playing with Cyber IO?\n\
+  Please leave a review, it can help us improve Cyber IO.
+RateUs.submit=Submit
