Removed some debug only bundles. Added a new statistic colum for heimdall.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -108,8 +108,6 @@ bar.cyber-io.generation=Generation {0}
 bar.cyber-io.slow-down=Boost: -{0}%
 bar.cyber-io.efficiency-absorption=EFF Absorb: {0}%
 bar.cyber-io.team=Team: {0}
-bar.cyber-io.spiral-rotate-speed=RotateSPD: {0}
-bar.cyber-io.alpha=Alpha: {0}
 bar.cyber-io.range=Range: {0} blocks
 bar.cyber-io.cool-down=Cool Down: {0}s
 bar.cyber-io.is-alive=Is Alive: {0}
@@ -134,6 +132,10 @@ bar.cyber-io.rest-life.figure=Rest Life: {0}s
 bar.cyber-io.rest-resurrect=Rest Life: {0} times
 bar.cyber-io.blood=Blood
 bar.cyber-io.temperature=Temperature
+# Statistic and Category
+category.heimdall=Heimdall
+stat.heimdall-basic=Basic
+stat.heimdall-improve=Upgrade
 # Bundles
 cyber-io.cyberion-req=cyberion
 cyber-io.cost.second=sec
@@ -188,9 +190,6 @@ setting.cyber-io-github-mirror.cancel-tooltip=Desert the input.
 setting.cyber-io-check-update.button=Check Update
 setting.cyber-io-check-update.already-latest=Current Cyber IO is already latest.
 setting.cyber-io-check-update.not-support=Check update doesn't support.
-# UI
-ui.cyber-io.mouse-position.build=Build:{0},{1}
-ui.cyber-io.mouse-position.world=World:{0},{1}
 # Heimdall
 heimdall.damage.name=Damage
 heimdall.damage.description=How much damage brain wave can cause
