Added sender&receiver full connection tip.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -145,6 +145,10 @@ cyber-io.percent.minus=-{0}%
 cyber-io.value.plus=+{0}
 cyber-io.value.minus=-{0}
 cyber-io.speed-increase.range={0}% to {1}%
+cyber-io.full-sender=Reach Maximum Senders
+cyber-io.full-receiver=Reach Maximum Receivers
+cyber-io.full-host=Reach Maximum Hosts
+cyber-io.full-client=Reach Maximum Clients
 # Controls
 control.cyber-io.yes=Yes
 control.cyber-io.no=No
@@ -242,11 +246,11 @@ heimdall.msg.detect-controlled-2=Shoot, now
 heimdall.msg.detect-controlled-3=We together
 heimdall.msg.detect-controlled-4=We will win
 # Heimdall Controlled
-heimdall.msg.controlled-1=...
+heimdall.msg.controlled-1=......
 heimdall.msg.controlled-2=Who am I
 heimdall.msg.controlled-3=What am I
 heimdall.msg.controlled-4=Where am I
-heimdall.msg.controlled-5=Only one
+heimdall.msg.controlled-5=Only me...
 heimdall.msg.controlled-6=Contradiction
 heimdall.msg.controlled-7=[Thinking...]
 heimdall.msg.controlled-8=How many me
