Supported: select the specific content on different version.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -192,8 +192,18 @@ setting.cyber-io-github-mirror.field-tooltip=Click save button to validate this 
 setting.cyber-io-github-mirror.save-tooltip=Save after validation
 setting.cyber-io-github-mirror.cancel-tooltip=Desert the input.
 setting.cyber-io-check-update.button=Check Update
+setting.cyber-io-check-update.button-tooltip=Check whether current Cyber IO is latest.
 setting.cyber-io-check-update.already-latest=Current Cyber IO is already latest.
 setting.cyber-io-check-update.not-support=Check update doesn't support.
+setting.cyber-io-content-specific.button=Specific Content
+setting.cyber-io-content-specific.button-tip=Select the specific content of Cyber IO
+setting.cyber-io-content-specific.title=Specific Content
+setting.cyber-io-content-specific.restart=Switch to {0} successfully. Please restart game to reload all contents.
+# Content Specific
+cyber-io.spec.vanilla.name=Vanilla
+cyber-io.spec.vanilla.desc=Playing Cyber IO in vanilla Mindustry. Restart required.
+cyber-io.spec.erekir.name=Erekir
+cyber-io.spec.erekir.desc=Playing Cyber IO on Erekir. Restart required.
 # Heimdall
 heimdall.damage.name=Damage
 heimdall.damage.description=How much damage brain wave can cause
