Added Cyber IO Erekir specific. Supported server to change content specific.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,13 +1,14 @@
 # Blocks
 block.cyber-io-ic-machine.name=IC Machine
 block.cyber-io-ic-machine.description=A machine which can make chips.
+block.cyber-io-ic-assembler.name=IC Assembler
+block.cyber-io-ic-assembler.description=To assembly a bar of chip.
 block.cyber-io-ic-machine-s.name=IC Maker 3000
 block.cyber-io-ic-machine-s.description=A simple machine which can make chips in a low speed (NOT ICE!!!)
 block.cyber-io-receiver.name=Receiver
 block.cyber-io-receiver.description=Receives the data.
 block.cyber-io-sender.name=Sender
 block.cyber-io-sender.description=Sends the data.
-block.cyber-io-sender.over-range=Over Range
 block.cyber-io-virus.name=Virus
 block.cyber-io-virus.description=An infinite spreading virus.
 block.cyber-io-land-projector.name=Land Projector
@@ -46,21 +47,19 @@ block.cyber-io-smart-distributor.tip=Distribute to surroundings side by side.
 block.cyber-io-smart-unloader.name=Smart Unloader
 block.cyber-io-smart-unloader.description=Smart Unloader can relieve the heavy pressure of transport and help improve mobility.
 block.cyber-io-smart-unloader.stats.power-use=Based on the number of connections and items required.
-block.cyber-io-smart-unloader.over-range=Over Range
 block.cyber-io-stream-client.name=Stream Client
 block.cyber-io-stream-client.description=Clients can get the instant liquid but limited by the network speed.
 block.cyber-io-stream-host.name=Stream Host
 block.cyber-io-stream-host.description=Hosting your stream. Every client can get your broadcast if they like.
 block.cyber-io-stream-host.stats.power-use=Based on the number of connections.
-block.cyber-io-stream-host.over-range=Over Range
 block.cyber-io-stream-server.name=Stream Server
 block.cyber-io-stream-server.description=A live-streaming server where you can share personal experience of Mindustry game! Enjoy yourself!
 block.cyber-io-stream-server.stats.power-use=Based on the number of host/client connections.
-block.cyber-io-stream-server.over-range=Over Range
 block.cyber-io-jammer.name=Jammer
 block.cyber-io-jammer.description=Jamming devices. Warning! Your cell phone may be jammed by it!
 block.cyber-io-cyberion-mixer.name=Cyberion Mixer
-block.cyber-io-cyberion-mixer.description=In theory, it seems superfluous, but it does work.
+block.cyber-io-cyberion-mixer.description=No one will figure out how this thing works
+block.cyber-io-cyberion-mixer.details=Developed by Plum Star Inc.
 block.cyber-io-holo-projector.name=Holo Projector
 block.cyber-io-holo-projector.description=Projecting holographic units by Cyberion.
 block.cyber-io-stealth.name=Stealth
@@ -111,11 +110,8 @@ bar.cyber-io.team=Team: {0}
 bar.cyber-io.range=Range: {0} blocks
 bar.cyber-io.cool-down=Cool Down: {0}s
 bar.cyber-io.is-alive=Is Alive: {0}
-bar.cyber-io.is-projecting=Is Projecting: {0}
 bar.cyber-io.rest-restore=Rest Restore: {0}
-bar.cyber-io.charge=Charge: {0}s
 bar.cyber-io.is-asleep=Is Asleep: {0}
-bar.cyber-io.last-damaged=Last Damage: {0}s
 bar.cyber-io.progress=Progress: {0}%
 bar.cyber-io.prism=Prism
 bar.cyber-io.prism.pl=Prisms
@@ -149,6 +145,8 @@ cyber-io.full-sender=Reach Maximum Senders
 cyber-io.full-receiver=Reach Maximum Receivers
 cyber-io.full-host=Reach Maximum Hosts
 cyber-io.full-client=Reach Maximum Clients
+cyber-io.over-range=Over Range
+cyber-io.unsaved-change=You have unsaved changes
 # Controls
 control.cyber-io.yes=Yes
 control.cyber-io.no=No
@@ -199,6 +197,9 @@ setting.cyber-io-content-specific.button=Specific Content
 setting.cyber-io-content-specific.button-tip=Select the specific content of Cyber IO
 setting.cyber-io-content-specific.title=Specific Content
 setting.cyber-io-content-specific.restart=Switch to {0} successfully. Please restart game to reload all contents.
+setting.cyber-io-content-specific.introduction=Select a specific version for Cyber IO to load
+setting.cyber-io-content-specific.switch-to=You will switch to {0}
+setting.cyber-io-content-specific.switch-back=You switch back to {0}
 # Content Specific
 cyber-io.spec.vanilla.name=Vanilla
 cyber-io.spec.vanilla.desc=Playing Cyber IO in vanilla Mindustry. Restart required.
