--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -65,3 +65,9 @@ RateUs.title=Rate Cyber IO
 RateUs=Pardon the interruption, do you enjoy playing with Cyber IO?\n\
   Please leave a review, it can help us improve Cyber IO.
 RateUs.submit=Submit
+ErekirDetected.title=New Planet Detected
+ErekirDetected=Recently a new planet has appeared on our radar, Plum Star Inc. named it "Erekir".\n\
+  Now, you, a new stuff, are dispatched to explore this planet as a pioneer.\n\
+  Opportunely, we have already prepared this spaceship for you, it only requires you to switch the route on the console.\n\
+  Settings >> Cyber IO >> Specific Content >> Erekir
+ErekirDetected.read=Set Out
