Content Specific textures. Rough balance for erekir content.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -202,7 +202,7 @@ setting.cyber-io-content-specific.switch-to=You will switch to {0}
 setting.cyber-io-content-specific.switch-back=You switch back to {0}
 # Content Specific
 cyber-io.spec.vanilla.name=Vanilla
-cyber-io.spec.vanilla.desc=Playing Cyber IO in vanilla Mindustry. Restart required.
+cyber-io.spec.vanilla.desc=Playing vanilla Cyber IO in Mindustry. Restart required.
 cyber-io.spec.erekir.name=Erekir
 cyber-io.spec.erekir.desc=Playing Cyber IO on Erekir. Restart required.
 # Heimdall
