DDos. Added a new welcome notifying player to switch cyberio spec.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -85,6 +85,9 @@ block.cyber-io-heimdall-ear.details=The upgrade component developed by New Brain
 block.cyber-io-heimdall-heart.name=Heart of Heimdall
 block.cyber-io-heimdall-heart.description=The latest result of Heimdall Project, and it's still in bleeding-edge testing.
 block.cyber-io-heimdall-heart.details=The upgrade component designed to be independent by New Brains Crop.
+block.cyber-io-DDoS.name=DDoS
+block.cyber-io-DDoS.description=
+block.cyber-io-DDoS.deny=Denied
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
