--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -53,8 +53,8 @@ AdBlock=Do you feel the popup advertisement is annoying?\n\
   Let's install the AdBlock, which can provide a completely clear environment for you!\n\
   P.S.: If you want to bring ad back, please check the game settings at:\n\
   Settings >> Cyber IO >> Receive Message from Plum Star Inc.
-AdBlock.yes=Install
-AdBlock.no=Not Now
+AdBlock.yes=Not Now
+AdBlock.no=Install
 404NotFound.title=[#e53935]404 Not Found[]
 404NotFound=[#e53935]404 Not Found[]
 404NotFound.read=Quit
@@ -70,4 +70,9 @@ ErekirDetected=Recently a new planet has appeared on our radar, Plum Star Inc. n
   Now, you, a new stuff, are dispatched to explore this planet as a pioneer.\n\
   Opportunely, we have already prepared this spaceship for you, it only requires you to switch the route on the console.\n\
   Settings >> Cyber IO >> Specific Content >> Erekir
-ErekirDetected.read=Set Out
+ErekirDetected.read=OK
+SetOutErekir.title=Route to Erekir
+SetOutErekir=No time to wait any longer! If we didn't go to Erekir right now, our competitor would be definitely one step ahead.\n\
+  The spaceship has been already prepared for you, let's go!
+SetOutErekir.yes=Set Out
+SetOutErekir.no=Wait
