--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -68,7 +68,8 @@ block.cyber-io-stealth.unaccepted=Permission Denied
 block.cyber-io-aqua-cyberion.name=Cyberion
 block.cyber-io-aqua-cyberion.description=A common liquid.
 block.cyber-io-wireless-tower.name=Wireless Tower
-block.cyber-io-wireless-tower.description=Powered by Plum Star Inc. literally.
+block.cyber-io-wireless-tower.description=Charge the battery. The ionizing radiation is harmless for your mechanical body.
+block.cyber-io-wireless-tower.details=Powered by Plum Star Inc. literally.
 block.cyber-io-wireless-tower.stats.power-use=Based on the amount of power use.
 block.cyber-io-data-miner.name=Data Miner
 block.cyber-io-data-miner.description=Extract the real mineral by AI. If you find this, oh, you reserved this block.
@@ -86,7 +87,7 @@ block.cyber-io-heimdall-heart.name=Heart of Heimdall
 block.cyber-io-heimdall-heart.description=The latest result of Heimdall Project, and it's still in bleeding-edge testing.
 block.cyber-io-heimdall-heart.details=The upgrade component designed to be independent by New Brains Crop.
 block.cyber-io-DDoS.name=DDoS
-block.cyber-io-DDoS.description=
+block.cyber-io-DDoS.description=Send all data to this. If you find "Denied" on this page, please contact your network administrator for more information.
 block.cyber-io-DDoS.deny=Denied
 # Items
 item.cyber-io-ic.name=IC
