Zip bomb. Graph things started.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -89,6 +89,9 @@ block.cyber-io-heimdall-heart.details=The upgrade component designed to be indep
 block.cyber-io-DDoS.name=DDoS
 block.cyber-io-DDoS.description=Send all data to this. If you find "Denied" on this page, please contact your network administrator for more information.
 block.cyber-io-DDoS.deny=Denied
+block.cyber-io-zip-bomb.name=Zip Bomb
+block.cyber-io-zip-bomb.description=Don't double-click this!
+block.cyber-io-zip-bomb.auto-detect=Auto Detect {0}
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
@@ -254,7 +257,7 @@ heimdall.msg.control-in-mod-1=Stranger
 heimdall.msg.control-in-mod-2=Never seen
 # Heimdall Detect Enemy
 heimdall.msg.detect-0=Something is coming
-heimdall.msg.detect-1=Who is coming
+heimdall.msg.detect-1=Who is coming?
 heimdall.msg.detect-2=Fire
 heimdall.msg.detect-controlled-0=We will win
 heimdall.msg.detect-controlled-1=What are we waiting for
@@ -267,7 +270,7 @@ heimdall.msg.controlled-2=Who am I
 heimdall.msg.controlled-3=What am I
 heimdall.msg.controlled-4=Where am I
 heimdall.msg.controlled-5=Only me...
-heimdall.msg.controlled-6=Contradiction
+heimdall.msg.controlled-6=I can feel myself
 heimdall.msg.controlled-7=[Thinking...]
 # Heimdall Ear Killing
 heimdall.msg.ear-killing-0=Noisy
@@ -280,19 +283,19 @@ heimdall.msg.eye-detect-1=I can see all
 heimdall.msg.eye-detect-2=All-seeing
 heimdall.msg.eye-detect-3=Where you go
 # Heimdall Hit
-heimdall.msg.hit-0=What's going on?
+heimdall.msg.hit-0=What's going on!
 heimdall.msg.hit-1=I am under attack!
 heimdall.msg.hit-2=Power me!
 heimdall.msg.hit-3=Protect me!
 heimdall.msg.hit-4=I need healing!
 heimdall.msg.hit-5=Help me!
 # Heimdall Part Destroyed
-heimdall.msg.part-destroyed-0=What is gone?
+heimdall.msg.part-destroyed-0=What's gone?
 heimdall.msg.part-destroyed-1=No!!!
 heimdall.msg.part-destroyed-2=I'm losing my power
 heimdall.msg.part-destroyed-3=Don't leave me!
 heimdall.msg.part-destroyed-4=I'm empty
-heimdall.msg.part-destroyed-5=I can't feel
+heimdall.msg.part-destroyed-5=I can't feel it
 heimdall.msg.part-destroyed-6=%#&$(%)#*#
 heimdall.msg.part-destroyed-7=What left me?
 # Heimdall Connect
@@ -311,3 +314,5 @@ heimdall.msg.heal-0=Not bad
 heimdall.msg.heal-1=I feel better
 heimdall.msg.heal-2=Rebirth
 heimdall.msg.heal-3=Comfortable
+heimdall.msg.heal-4=Thanks
+heimdall.msg.heal-5=blessing you
