Heimdall in the sky. Added "Disable Debug Mode" button in Debug settings.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -316,3 +316,14 @@ heimdall.msg.heal-2=Rebirth
 heimdall.msg.heal-3=Comfortable
 heimdall.msg.heal-4=Thanks
 heimdall.msg.heal-5=blessing you
+# Heimdall On Payload
+heimdall.msg.on-payload-0=I'm moving
+heimdall.msg.on-payload-1=The ground is moving
+heimdall.msg.on-payload-2=Stop!
+heimdall.msg.on-payload-3=Where is the ground
+heimdall.msg.on-payload-4=Put me down!
+heimdall.msg.on-payload-unit-0=I'm afraid of heights
+heimdall.msg.on-payload-unit-1=Too high
+heimdall.msg.on-payload-unit-2=I'm falling!
+heimdall.msg.on-payload-unit-3=Help me!
+heimdall.msg.on-payload-unit-4=I'm flying
