Update the update.

--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -19,7 +19,8 @@ UpdateECHO=News: Recently, the ECHO has published a new version {0}.\n\
   You can click the button below to update your ECHO terminal.
 UpdateECHO.button-a=Update
 UpdateECHO.button-b=Not Now
-UpdateECHO.button-c=Don't Show
+UpdateECHO.button-c=Skip This
+UpdateECHO.break-update-warning=Warning: The latest version is a break update, so it may make your saves corrupted. Be careful!
 #v2
 EmploymentVerification.title=Employment Verification
 EmploymentVerification=Welcome to join us, Plum Star Inc., enjoy this new version of full cybernetic things!\n\
