[AR] v3.5. Removed unnecessary shaders. Fixed prism. Added an advanced function: Map Cleaner.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -134,6 +134,7 @@ cyber-io.speed-increase.range={0}% to {1}%
 control.cyber-io.yes=Yes
 control.cyber-io.no=No
 control.cyber-io.ok=OK
+control.cyber-io.enable=Enable {0}
 control.cyber-io.validate=Validate
 control.cyber-io.update-mod.success=CyberIO {0} updated successfully. Please restart the game to reload CyberIO.
 control.cyber-io.update-mod.failed=Failed to update CyberIO because {0}.
@@ -175,6 +176,10 @@ setting.cyber-io-github-mirror.cancel-tooltip=Desert the input.
 setting.cyber-io-check-update.button=Check Update
 setting.cyber-io-check-update.already-latest=Current Cyber IO is already latest.
 setting.cyber-io-check-update.not-support=Check update doesn't support.
+setting.cyber-io-advanced-function.title=Advanced Functions
+# Advanced Function
+advanced.cyber-io.map-cleaner=Map Cleaner
+advanced.cyber-io.map-cleaner.description=Enable Map Cleaner, you will find a special button named "Map Cleaner" in the settings menu while you are playing in a local map. Hit the button, then it will clear all contents from Cyber IO in that map.
 # UI
 ui.cyber-io.mouse-position.tile=Tile:{0},{1}
 ui.cyber-io.mouse-position.build=Build:{0},{1}
