Statistic of Sender&Receiver and others.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -135,11 +135,17 @@ bar.cyber-io.rest-resurrect=Rest Life: {0} times
 bar.cyber-io.blood=Blood
 bar.cyber-io.temperature=Temperature
 # Statistic and Category
-category.heimdall=Heimdall
-stat.heimdall-basic=Basic
-stat.heimdall-improve=Upgrade
+category.cyber-io-heimdall=Heimdall
+category.cyber-io-data-transfer=Data Transfer
+stat.cyber-io-heimdall-basic=Basic
+stat.cyber-io-heimdall-improve=Upgrade
+stat.cyber-io-data-transfer-range=Range
+stat.cyber-io-data-transfer-max-sender=Max Sender
+stat.cyber-io-data-transfer-max-receiver=Max Receiver
+stat.cyber-io-data-transfer-max-host=Max Host
+stat.cyber-io-data-transfer-max-client=Max Client
+stat.power-cyber-io-transfer-speed=Transfer Speed
 # Bundles
-cyber-io.cyberion-req=cyberion
 cyber-io.cost.second=sec
 cyber-io.cost.minute=min
 cyber-io.percent.plus=+{0}%
@@ -153,6 +159,7 @@ cyber-io.full-host=Reach Maximum Hosts
 cyber-io.full-client=Reach Maximum Clients
 cyber-io.over-range=Over Range
 cyber-io.unsaved-change=You have unsaved changes
+cyber-io.unlimited=Unlimited
 # Controls
 control.cyber-io.yes=Yes
 control.cyber-io.no=No
