separate out projects: lib and mdt v2. Payload network.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
+# suppress inspection "SpellCheckingInspection" for whole file
 MindustryVersion=v136
 OpenGalPlumy=v0.1.4
 OutputJarName=CyberIO
 MdtHash=c4b4c2e15c
+PlumyHash=a5a83e644b
